# progetto_db

./: Cargo.toml  README.txt
.github/workflows/: build.yml
queries/: create_db.sql  populate.sql
report/: .gitignore  report.tex
report/res/: accessi.fodt
src/: db.rs  main.rs  routes.rs  utils.rs
src/routes/: home_route.rs  insert_api_route.rs  insert_item_route.rs  list_table_route.rs  mod.rs  station_timetable_route.rs  train_composition_route.rs  train_status_route.rs
templates/: base.html.tera  home.html.tera  insert_item.html.tera  list.html.tera  station_timetable.html.tera  train_composition.html.tera  train_status.html.tera
