[package]
name = "progetto_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
r2d2 = "0.8"
r2d2_postgres = "0.18"
once_cell = "1"
dotenv = "0.15"

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default-features = false
features = ["postgres_pool"]
